--- a/nicepage.css
+++ b/nicepage.css
@@ -24276,7 +24276,7 @@ span.product-remove:after {
   top: -10px;
   left: 0;
   display: inline-block;
-  width: 100%;
+ /* width: 100%;*/
   height: 10px;
   content: "";
 }
@@ -24285,7 +24285,7 @@ span.product-remove:after {
   bottom: -10px;
   left: 0;
   display: inline-block;
-  width: 100%;
+ /* width: 100%;*/
   height: 10px;
   content: "";
 }
